force-app/main/default/objects/CommissionPayment2__c/CommissionPayment2__c.object-meta.xml
<CustomObject>
    <label>Commission Payment</label>
    <nameField>
        <displayFormat>CommPayment-{0000}</displayFormat>
        <label>Commission Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>