force-app/main/default/objects/CommissionPayment2__c/fields/Commission_Record2__c.field-meta.xml
<CustomField>
    <fullName>Commission_Record2__c</fullName>
    <label>Commission Record</label>
    <referenceTo>CommissionRecord2__c</referenceTo>
    <relationshipLabel>Commission Payments</relationshipLabel>
    <relationshipName>Commission_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>