force-app/main/default/objects/CommissionPayment2__c/fields/Gross_Margin_Payment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Payment_Percent__c</fullName>
    <label>Gross Margin Payment Percent</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>