force-app/main/default/objects/CommissionPayment2__c/fields/Manager_Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Manager_Commission_Type__c</fullName>
    <label>Manager Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gross Margin</fullName>
                <default>true</default>
                <label>Gross Margin</label>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Business Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>