force-app/main/default/objects/CommissionPayment2__c/fields/Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Percent__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Split Percent</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>