force-app/main/default/objects/CommissionPayment2__c/fields/Use_Gross_Margin_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Use_Gross_Margin_Calculation__c</fullName>
    <formula>ISPICKVAL( Commission_Record2__r.Calculation_Method__c, &#39;Gross Margin&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Gross Margin Calculation</label>
    <type>Checkbox</type>
</CustomField>